# aurora-notify

./: .gitattributes  .gitignore  README.md  find_surrounding_points.py  flake.nix  justfile  pyproject.toml  test_find_surrounding_points.py
src/aurora/: __main__.py
tests/: test_main.py
